Implemented input validation